# stm32c031c6_tpl

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  STM32C031XX_FLASH.ld
cmake/: gcc-arm-none-eabi.cmake
ctest/: CMakeLists.txt  addvalues_zero.c  test_encoder.c  test_servo.c
encoder/: CMakeLists.txt  encoder.c  encoder.h
inc/: FreeRTOSConfig.h  app_freertos.h  encoder.h  error.h  main.h  pan_tilt.h  rotary_encoder.h  servo.h  stm32_encoder.h  stm32_gpio.h  stm32_int.h  stm32_servo.h  stm32_sysclock.h  stm32_tim.h  stm32c0xx_hal_conf.h  stm32c0xx_it.h  stm32c0xx_nucleo_conf.h
servo/: CMakeLists.txt  servo.c  servo.h
src/: CMakeLists.txt  app_freertos.c  encoder.c  main.c  pan_tilt.c  rotary_encoder.c  servo.c  stm32_encoder.c  stm32_gpio.c  stm32_int.c  stm32_servo.c  stm32_sysclock.c  stm32_tim.c  stm32c0xx_hal_msp.c  stm32c0xx_hal_timebase_tim.c  stm32c0xx_it.c  syscalls.c  sysmem.c  system_stm32c0xx.c
